[gd_scene load_steps=6 format=3 uid="uid://c7q6wu8ib85md"]

[ext_resource type="Script" uid="uid://co4yq4un84qov" path="res://scripts/question_container.gd" id="1_flck2"]
[ext_resource type="Theme" uid="uid://bdoc5hu8xke7a" path="res://themes/yellow_text.tres" id="2_pqhjd"]
[ext_resource type="Theme" uid="uid://bb774gsilu77b" path="res://themes/white_text.tres" id="3_h6nhu"]

[sub_resource type="Theme" id="Theme_x1ewb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_or4vw"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.972549, 0.780392, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0470588, 0.258824, 0.415686, 1)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0.133333, 0.168627, 0.203922, 1)
shadow_size = 20

[node name="QuestionContainer" type="PanelContainer"]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(1248, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -237.0
offset_right = 1348.0
offset_bottom = 237.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_x1ewb")
theme_override_styles/panel = SubResource("StyleBoxFlat_or4vw")
script = ExtResource("1_flck2")

[node name="QuestionBox" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme = ExtResource("2_pqhjd")
alignment = 1

[node name="QuestionTextContainer" type="MarginContainer" parent="QuestionBox"]
use_parent_material = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="QuestionText" type="RichTextLabel" parent="QuestionBox/QuestionTextContainer"]
use_parent_material = true
layout_mode = 2
theme = ExtResource("3_h6nhu")
text = "Some text"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsList" type="HBoxContainer" parent="QuestionBox"]
use_parent_material = true
layout_mode = 2

[node name="Option1" type="Button" parent="QuestionBox/OptionsList"]
use_parent_material = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_pqhjd")
text = "Some text Some text Some text Some text Some text "
autowrap_mode = 3

[node name="Option2" type="Button" parent="QuestionBox/OptionsList"]
use_parent_material = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_pqhjd")
text = "Some text Some text Some text Some text Some text "
autowrap_mode = 3

[node name="Option3" type="Button" parent="QuestionBox/OptionsList"]
use_parent_material = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_pqhjd")
text = "Some text Some text Some text Some text Some text "
autowrap_mode = 3

[connection signal="pressed" from="QuestionBox/OptionsList/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="QuestionBox/OptionsList/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="QuestionBox/OptionsList/Option3" to="." method="_on_option_3_pressed"]
